# Yaka-Kart-Otomasyonu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.example.json  profiles.example.json  pyproject.toml  requirements.txt  stats.example.json
.github/workflows/: ci.yml
docs/: BUILD.md
src/medar_yakakart/: __init__.py  app.py
