[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "medar-yakakart"
version = "3.0.0"
description = "PDF tabanlı yaka kartlarını dupleks baskıya uygun Word çıktısına dönüştüren masaüstü araç"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pymupdf>=1.23",
  "python-docx>=1.1",
  "Pillow>=10.0",
]

[project.scripts]
medar-yakakart = "medar_yakakart.app:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["medar_yakakart"]
